--- a/app/templates/custlogin.html
+++ b/app/templates/custlogin.html
@@ -23,13 +23,13 @@
     <form class="form-signin" action="" method="post">
         <div class="text-center mb-4">
             <img class="mb-4" src="../static/styles/home_logo.svg" alt="" width="100" height="100">
-            <h1 class="h3 mb-3 font-weight-normal font">Login to Homes</h1>
+            <h1 class="h3 mb-3 font-weight-normal font">Customer login to Homes</h1>
         </div>
 
         <div class="form-label-group">
-            <input name="username" type="email" id="inputEmail" class="form-control" placeholder="Email address"
+            <input name="username" type="text" id="inputName" class="form-control" placeholder="User Name"
                    required="" autofocus="">
-            <label for="inputEmail">Email address</label>
+            <label for="inputName">User Name</label>
         </div>
 
         <div class="form-label-group">
