--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -37,21 +37,21 @@
     </header>
 
     <main role="main" class="inner cover">
-        <h1 class="cover-heading">Welcome to Homes Data!</h1>
-        <p class="lead">This site was built for NJIT's class IS-601 as a Final Project. Sign in below!</p>
-        <form action="/login">
+        <h1 class="cover-heading">Welcome to CS-631 Bank</h1>
+        <form action="/emplogin">
             <p class="lead">
-                <button type="submit" class="btn btn-lg btn-secondary">Login</button>
+                <button type="submit" class="btn btn-lg btn-secondary">Employee Login</button>
             </p>
         </form>
-        <h2>New? Register for an account!</h2>
-        <form action="/register">
+        <form action="/custlogin">
             <br>
             <p class="lead">
-                <button type="submit" class="btn btn-lg btn-secondary">Sign-Up</button>
+                <button type="submit" class="btn btn-lg btn-secondary">Customer Login</button>
             </p>
         </form>
-
+        <form action="/register">
+            <h2>New? Register for an account <button type="submit" class="btn btn-lg btn-secondary">here!</button></h2>
+        </form>
     </main>
 
     <footer class="mastfoot mt-auto">
