--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -27,25 +27,49 @@
         </div>
 
         <div class="form-label-group">
-            <input name="one" type="text" id="inputName" class="form-control" placeholder="First Name"
+            <input name="one" type="text" id="inputName" class="form-control" placeholder="Full Name"
                    required="" autofocus="">
-            <label for="inputName">First Name</label>
+            <label for="inputName">Full Name</label>
         </div>
         <div class="form-label-group">
-            <input name="two" type="email" id="inputEmail" class="form-control" placeholder="Email address"
+            <input name="two" type="text" id="inputSSN" class="form-control" placeholder="SSN"
                    required="" autofocus="">
-            <label for="inputEmail">Email address</label>
+            <label for="inputName">SSN</label>
         </div>
-
+                <div class="form-label-group">
+            <input name="three" type="text" id="inputCity" class="form-control" placeholder="City"
+                   required="" autofocus="">
+            <label for="inputName">City</label>
+        </div>
+                <div class="form-label-group">
+            <input name="four" type="text" id="inputState" class="form-control" placeholder="State"
+                   required="" autofocus="">
+            <label for="inputName">State</label>
+        </div>
+                <div class="form-label-group">
+            <input name="five" type="text" id="inputZipCode" class="form-control" placeholder="ZipCode"
+                   required="" autofocus="">
+            <label for="inputName">ZipCode</label>
+        </div>
+                <div class="form-label-group">
+            <input name="six" type="text" id="inputStreetNumber" class="form-control" placeholder="Street Number"
+                   required="" autofocus="">
+            <label for="inputName">Street Number</label>
+        </div>
+                <div class="form-label-group">
+            <input name="seven" type="text" id="inputUserName" class="form-control" placeholder="User Name"
+                   required="" autofocus="">
+            <label for="inputName">User Name</label>
+        </div>
         <div class="form-label-group">
-            <input name="three" type="password" id="inputPassword" class="form-control" placeholder="Password"
+            <input name="eight" type="password" id="inputPassword" class="form-control" placeholder="Password"
                    required="">
             <label for="inputPassword">Password</label>
         </div>
 
         <div class="checkbox mb-3 font">
             <p>Have an account?
-                <a href="/login">Login here!</a>
+                <a href="/custlogin">Login here!</a>
             </p>
         </div>
 
