--- a/app/templates/new.html
+++ b/app/templates/new.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+{% extends "emplayout.html" %}
 {% block content %}
 <form action="/homes/new" method="POST">
 <div class="row">
