--- a/app/templates/edit.html
+++ b/app/templates/edit.html
@@ -1,55 +1,45 @@
-{% extends "layout.html" %}
+{% extends "emplayout.html" %}
 {% block content %}
-<form action="/edit/{{home.id}}" method="post">
+<form action="/edit/{{customer.Customer_SSN}}" method="post">
     <div class="row">
         <div class="col">
-            <label for="Sell">Sell Price</label>
-            <input id="Sell" type="text" class="form-control" placeholder="Sell Price" name="Sell"
-                   value="{{home.Sell}}">
+            <label for="List">City</label>
+            <input id="List" type="text" class="form-control" placeholder="City"
+                   name="City" value="{{customer.City}}">
         </div>
         <div class="col">
-            <label for="List">List Price</label>
-            <input id="List" type="text" class="form-control" placeholder="List Price"
-                   name="List" value="{{home.List}}">
-        </div>
-        <div class="col">
-            <label for="Living">Living</label>
-            <input id="Living" type="text" class="form-control" placeholder="Living" name="Living"
-                   value="{{home.Living}}">
+            <label for="Living">State</label>
+            <input id="Living" type="text" class="form-control" placeholder="Living" name="State"
+                   value="{{customer.State}}">
         </div>
     </div>
     <div class="row">
         <div class="col">
-            <label for="Rooms">Number of Rooms</label>
-            <input id="Rooms" type="text" class="form-control" placeholder="Number of Rooms" name="Rooms"
-                   value="{{home.Rooms}}">
+            <label for="Rooms">Zip Code</label>
+            <input id="Rooms" type="number" class="form-control" placeholder="Number of Rooms" name="ZipCode"
+                   value="{{customer.ZipCode}}">
         </div>
         <div class="col">
-            <label for="Beds">Number of Beds</label>
-            <input id="Beds" type="text" class="form-control" placeholder="Number of Beds" name="Beds"
-                   value="{{home.Beds}}">
+            <label for="Beds">Street Number</label>
+            <input id="Beds" type="number" class="form-control" placeholder="Number of Beds" name="StreetNum"
+                   value="{{customer.StreetNum}}">
         </div>
         <div class="col">
-            <label for="Baths">Number of Baths</label>
+            <label for="Baths">Customer Name</label>
             <input id="Baths" type="text" class="form-control" placeholder="Number of Baths"
-                   name="Baths" value="{{home.Baths}}">
+                   name="CustomerName" value="{{customer.CustomerName}}">
         </div>
     </div>
     <div class="row">
         <div class="col">
-            <label for="Age">Age of Property</label>
-            <input id="Age" type="text" class="form-control" placeholder="Age of Property" name="Age"
-                   value="{{home.Age}}">
+            <label for="Age">Customer Login</label>
+            <input id="Age" type="text" class="form-control" placeholder="Age of Property" name="CustomerLogin"
+                   value="{{customer.CustomerLogin}}">
         </div>
         <div class="col">
-            <label for="Acres">Number of Acres</label>
-            <input id="Acres" type="text" class="form-control" placeholder="Number of Acres" name="Acres"
-                   value="{{home.Acres}}">
-        </div>
-        <div class="col">
-            <label for="Taxes">Taxes</label>
-            <input id="Taxes" type="text" class="form-control" placeholder="Taxes" name="Taxes"
-                   value="{{home.Taxes}}">
+            <label for="Acres">Customer Password</label>
+            <input id="Acres" type="password" class="form-control" placeholder="Number of Acres" name="CustomerPassword"
+                   value="{{customer.CustomerPassword}}">
         </div>
     </div>
     <button type="submit" class="btn btn-success">Save</button>
