--- a/app/templates/view.html
+++ b/app/templates/view.html
@@ -1,28 +1,21 @@
-{% extends "layout.html" %}
+{% extends "emplayout.html" %}
 {% block content %}
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/Chart.js/1.0.2/Chart.min.js'></script>
+
 <center>
     <h1>{{ title }}</h1>
     </center>
     <center>
-        <canvas id="chart" width="600" height="400"></canvas>
 
         <div class="card" class="m-5 p-2">
-            <h5 class="card-title">Home #-{{ home.id }}</h5>
+            <h5 class="card-title">Home #-{{ customer.Customer_SSN }}</h5>
             <ul class="list-group list-group-flush">
-                <li class="list-group-item">Sell Price = {{ home.Sell }}</li>
-                <li class="list-group-item">List Price = {{ home.List }}</li>
-                <li class="list-group-item">Living = {{ home.Living }}</li>
-                <li class="list-group-item">Number of Rooms = {{ home.Rooms }}</li>
-                <li class="list-group-item">Number of Beds = {{ home.Beds }}</li>
-                <li class="list-group-item">Number of Baths = {{ home.Baths }}</li>
-                <li class="list-group-item">Age of Property = {{ home.Age }}</li>
-                <li class="list-group-item">Number of Acres = {{ home.Acres }}</li>
-                <li class="list-group-item">Taxes = {{ home.Taxes }}</li>
+                <li class="list-group-item">Customer = {{ customer.City  }}</li>
+
+
             </ul>
             <div class="card-body">
-                <a href="/edit/{{ home.id }}" class="card-link btn btn-primary">edit</a>
-                <form action="/delete/{{ home.id }}" method="post">
+                <a href="/edit/{{ customer.Customer_SSN  }}" class="card-link btn btn-primary">edit</a>
+                <form action="" method="post">
                     <button type="submit" class="btn btn-danger">Delete</button>
                 </form>
             </div>
