--- a/app/templates/emplayout.html
+++ b/app/templates/emplayout.html
@@ -40,7 +40,7 @@
                             class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item active">
-                    <a class="btn btn-success pl-2 lr-2 ml-3" href="/homes/new">Add +<span
+                    <a class="btn btn-success pl-2 lr-2 ml-3" href="/customers/new">Add +<span
                             class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item active">
