--- a/app/templates/custacctview.html
+++ b/app/templates/custacctview.html
@@ -1,24 +1,22 @@
 {% extends "custlayout.html" %}
 {% block content %}
 
-<h1> CUSTOMER</h1>
+<center>
+    <h1>{{ title }}</h1>
+    </center>
+    <center>
 
-<table class="table">
-    <thead>
-    <tr>
-        <th scope="col">Account Number</th>
-        <th scope="col">Account Type</th>
-        <th scope="col">Balance</th>
-    </tr>
-    </thead>
-    <tbody>
-    {% for customer_account in customer_accounts %}
-    <tr>
-        <td><a href="/custview/{{customer_account.Account_Num}}">{{ customer_account.Account_Num }}</a></td>
-        <td>{{ customer_account.Account_Type }}</td>
-        <td>{{ customer_account.balance }}</td>
-    </tr>
-    {% endfor %}
-    </tbody>
-</table>
+        <div class="card" class="m-5 p-2">
+            <h5 class="card-title">Home #-{{ customer_account.Account_Num }}</h5>
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">Type = {{ customer_account.Account_Type  }}</li>
+                 <li class="list-group-item">Type = {{ customer_account.balance }}</li>
+            </ul>
+{#            <div class="card-body">#}
+{#                <a href="/edit/{{ customer.Customer_SSN  }}" class="card-link btn btn-primary">edit</a>#}
+{#                <form action="/delete/{{ customer.Customer_SSN }}" method="post">#}
+{#                    <button type="submit" class="btn btn-danger">Delete</button>#}
+{#                </form>#}
+            </div>
+        </div>
 {% endblock %}
