--- a/app/templates/custacctview.html
+++ b/app/templates/custacctview.html
@@ -12,11 +12,9 @@
                 <li class="list-group-item">Type = {{ customer_account.Account_Type  }}</li>
                  <li class="list-group-item">Type = {{ customer_account.balance }}</li>
             </ul>
-{#            <div class="card-body">#}
-{#                <a href="/edit/{{ customer.Customer_SSN  }}" class="card-link btn btn-primary">edit</a>#}
-{#                <form action="/delete/{{ customer.Customer_SSN }}" method="post">#}
-{#                    <button type="submit" class="btn btn-danger">Delete</button>#}
-{#                </form>#}
+            <div class="card-body">
+ <a href="/changebal/{{ customer_account.Account_Num  }}" class="card-link btn btn-primary">Transfers</a>
+{#                <a href="/printview/{{ customer.Account_Num  }}" class="card-link btn btn-primary">Print Passbook</a>#}
             </div>
         </div>
 {% endblock %}
