--- a/app/templates/empcreatecust.html
+++ b/app/templates/empcreatecust.html
@@ -3,8 +3,8 @@
 <form action="/customers/new" method="POST">
 <div class="row">
             <div class="col">
-            <label for="SSN">City</label>
-            <input id="SSN" type="text" class="form-control" placeholder="City"
+            <label for="SSN">Customer SSN</label>
+            <input id="SSN" type="text" class="form-control" placeholder="SSN"
                    name="Customer_SSN" value="">
         </div>
         <div class="col">
@@ -41,6 +41,20 @@
         <div class="col">
             <label for="Acres">Customer Password</label>
             <input id="Acres" type="password" class="form-control" placeholder="Number of Acres" name="CustomerPassword">
+        </div>
+    </div>
+        <div class="row">
+        <div class="col">
+            <label for="Acct_Num">Account Number</label>
+            <input id="Acct_Num" type="text" class="form-control" placeholder="Account number" name="Account_Num">
+        </div>
+            <div class="col">
+            <label for="Acct_type">Account Type</label>
+            <input id="Acct_type" type="text" class="form-control" placeholder="Withdrawal" name="Account_Type">
+        </div>
+        <div class="col">
+            <label for="Bal">Initial Balance</label>
+            <input id="Bal" type="number" class="form-control" placeholder="Balance" name="Balance">
         </div>
     </div>
 
