Added passbook functionality

--- a/app/templates/bankingsystem.html
+++ b/app/templates/bankingsystem.html
@@ -7,11 +7,11 @@
             <input id="acct_num" type="number" class="form-control" placeholder="City"
                    name="Account_Num" value="{{banking_system.Account_Num}}" readonly>
         </div>
-                <div class="col">
+        <div class="col">
             <label for="bal">Balance </label>
-            <input id="bal" type="number" class="form-control" placeholder="Bal"
-                   name="Balance" value="{{banking_system.Balance}}">
-        </div>
+            <input id="bal" type="number" class="form-control" placeholder="Bal"#}
+                  name="Balance" value="{{banking_system.Balance}}">
+      </div>
         <div class="col">
 
             <label for="sub">Withdrawal</label>
@@ -36,6 +36,7 @@
             <input id="date" type="text" class="form-control" placeholder="Deposit" name="Transact_Date"
                    value="">
         </div>
+
     </div>
     <button type="submit" class="btn btn-success">Save</button>
 
