--- a/app/templates/custview.html
+++ b/app/templates/custview.html
@@ -16,7 +16,7 @@
     <tr>
         <td><a href="/custview/{{customer_account.Account_Num}}">{{ customer_account.Account_Num }}</a></td>
         <td>{{ customer_account.Account_Type }}</td>
-        <td>{{ customer_account.balance }}</td>
+        <td>{{ customer_account.Balance }}</td>
     </tr>
     {% endfor %}
     </tbody>
