--- a/app/templates/custacctview.html
+++ b/app/templates/custacctview.html
@@ -10,11 +10,11 @@
             <h5 class="card-title">Home #-{{ customer_account.Account_Num }}</h5>
             <ul class="list-group list-group-flush">
                 <li class="list-group-item">Type = {{ customer_account.Account_Type  }}</li>
-                 <li class="list-group-item">Type = {{ customer_account.balance }}</li>
+                 <li class="list-group-item">Type = {{ customer_account.Balance }}</li>
             </ul>
             <div class="card-body">
  <a href="/changebal/{{ customer_account.Account_Num  }}" class="card-link btn btn-primary">Transfers</a>
-{#                <a href="/printview/{{ customer.Account_Num  }}" class="card-link btn btn-primary">Print Passbook</a>#}
+               <a href="/passbook" class="card-link btn btn-primary">Print Passbook</a>
             </div>
         </div>
 {% endblock %}
