--- a/app/templates/empcreatecust.html
+++ b/app/templates/empcreatecust.html
@@ -4,7 +4,7 @@
 <div class="row">
             <div class="col">
             <label for="SSN">Customer SSN</label>
-            <input id="SSN" type="text" class="form-control" placeholder="SSN"
+            <input id="SSN" type="number" class="form-control" placeholder="SSN"
                    name="Customer_SSN" value="">
         </div>
         <div class="col">
