--- a/app/templates/empcreatecust.html
+++ b/app/templates/empcreatecust.html
@@ -13,34 +13,34 @@
                    name="City" value="">
         </div>
         <div class="col">
-            <label for="Living">State</label>
-            <input id="Living" type="text" class="form-control" placeholder="Living" name="State"
+            <label for="State">State</label>
+            <input id="State" type="text" class="form-control" placeholder="State" name="State"
                    value="">
         </div>
     </div>
     <div class="row">
         <div class="col">
-            <label for="Rooms">Zip Code</label>
-            <input id="Rooms" type="number" class="form-control" placeholder="Number of Rooms" name="ZipCode">
+            <label for="zip">Zip Code</label>
+            <input id="zip" type="number" class="form-control" placeholder="ZipCode" name="ZipCode">
         </div>
         <div class="col">
-            <label for="Beds">Street Number</label>
-            <input id="Beds" type="number" class="form-control" placeholder="Number of Beds" name="StreetNum">
+            <label for="StreetNum">Street Number</label>
+            <input id="StreetNum" type="number" class="form-control" placeholder="Street Number" name="StreetNum">
         </div>
         <div class="col">
-            <label for="Baths">Customer Name</label>
-            <input id="Baths" type="text" class="form-control" placeholder="Number of Baths"
+            <label for="Name">Customer Name</label>
+            <input id="Name" type="text" class="form-control" placeholder="Full Name"
                    name="CustomerName">
         </div>
     </div>
     <div class="row">
         <div class="col">
-            <label for="Age">Customer Login</label>
-            <input id="Age" type="text" class="form-control" placeholder="Age of Property" name="CustomerLogin">
+            <label for="Login">Customer Login</label>
+            <input id="Login" type="text" class="form-control" placeholder="User Name" name="CustomerLogin">
         </div>
         <div class="col">
-            <label for="Acres">Customer Password</label>
-            <input id="Acres" type="password" class="form-control" placeholder="Number of Acres" name="CustomerPassword">
+            <label for="Pass">Customer Password</label>
+            <input id="Pass" type="password" class="form-control" placeholder="Password" name="CustomerPassword">
         </div>
     </div>
         <div class="row">
@@ -58,7 +58,7 @@
         </div>
     </div>
 
-    <button type="submit" class="btn btn-success">Success</button>
+    <button type="submit" class="btn btn-success">Create new</button>
 
 </form>
 
