--- a/app/templates/custlayout.html
+++ b/app/templates/custlayout.html
@@ -11,7 +11,7 @@
     <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
     <link crossorigin="anonymous" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
           integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" rel="stylesheet">
-        <title>Employee view</title>
+        <title>Customer view</title>
 
     </head>
 <body>
@@ -27,17 +27,6 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
-                <li class="nav-item active">
-                    <a class="nav-link" href="/homepage">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="/api/v1/homes">homes API JSON endpoint <span
-                            class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item active">
-                    <a class="btn btn-success pl-2 lr-2 ml-3" href="/customers/new">Add +<span
-                            class="sr-only">(current)</span></a>
-                </li>
                 <li class="nav-item active">
                     <form action="/logout">
                         <button class="btn btn-danger pl-2 lr-2 ml-3" type="submit" name="logout">Logout<span
