--- a/app/templates/custlogin.html
+++ b/app/templates/custlogin.html
@@ -22,8 +22,7 @@
 
     <form class="form-signin" action="" method="post">
         <div class="text-center mb-4">
-            <img class="mb-4" src="../static/styles/home_logo.svg" alt="" width="100" height="100">
-            <h1 class="h3 mb-3 font-weight-normal font">Customer login to Homes</h1>
+            <h1 class="h3 mb-3 font-weight-normal font">Customer login</h1>
         </div>
 
         <div class="form-label-group">
@@ -45,7 +44,7 @@
         </div>
 
         <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-        <p class="mt-5 mb-3 text-muted text-center">© Nikolett Muller and Justin Nietzer</p>
+        <p class="mt-5 mb-3 text-muted text-center">© Joseph Brueno and Justin Nietzer</p>
     </form>
 </div>
 
