--- a/app/templates/emplayout.html
+++ b/app/templates/emplayout.html
@@ -20,20 +20,13 @@
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light mb-1">
     <div class="container">
-        <a class="navbar-brand" href="#"><title>Welcome to My Homepage</title></a>
+        <a class="navbar-brand" href="#"><title>Welcome to the Employee Page</title></a>
         <button aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation"
                 class="navbar-toggler" data-target="#navbarNavDropdown" data-toggle="collapse" type="button">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
-                <li class="nav-item active">
-                    <a class="nav-link" href="/homepage">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="/api/v1/homes">homes API JSON endpoint <span
-                            class="sr-only">(current)</span></a>
-                </li>
                 <li class="nav-item active">
                     <a class="btn btn-success pl-2 lr-2 ml-3" href="/customers/new">Add +<span
                             class="sr-only">(current)</span></a>
