--- a/app/templates/emplogin.html
+++ b/app/templates/emplogin.html
@@ -15,15 +15,15 @@
           integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" rel="stylesheet">
     <link rel="stylesheet" href="../static/styles/signup.css">
     <link rel="stylesheet" href="{{ url_for('static',filename='styles/signup.css') }}">
-    <title>Login | Final Web App</title>
+    <title>Login | CS631 Bank</title>
     <head>
 
 <body>
 
     <form class="form-signin" action="" method="post">
         <div class="text-center mb-4">
-            <img class="mb-4" src="../static/styles/home_logo.svg" alt="" width="100" height="100">
-            <h1 class="h3 mb-3 font-weight-normal font">Employee login to Homes</h1>
+
+            <h1 class="h3 mb-3 font-weight-normal font">Employee login</h1>
         </div>
 
         <div class="form-label-group">
@@ -39,7 +39,7 @@
         </div>
 
         <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-        <p class="mt-5 mb-3 text-muted text-center">© Nikolett Muller and Justin Nietzer</p>
+        <p class="mt-5 mb-3 text-muted text-center">© Joseph Brueno and Justin Nietzer</p>
     </form>
 </div>
 
