--- a/app/templates/empview.html
+++ b/app/templates/empview.html
@@ -1,7 +1,7 @@
 {% extends "emplayout.html" %}
 {% block content %}
 
-<h1>EMPLOYEE</h1>
+<h1>Employee View</h1>
 <table class="table">
     <thead>
     <tr>
