--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -12,7 +12,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ url_for('static',filename='styles/layout.css') }}">
-    <title>Welcome | Final Web App</title>
+    <title>Welcome | CS631 Bank</title>
 </head>
 
 <body class="text-center">
@@ -20,18 +20,7 @@
 <div class="cover-container d-flex h-100 p-3 mx-auto flex-column">
     <header class="masthead mb-auto">
         <div class="inner">
-            <h3 class="masthead-brand"><a href="/"><img src="../static/styles/home_logo.svg" width="100"
-                                                        height="50"></a></h3>
-            <nav class="nav nav-masthead justify-content-center">
-                <form action="/">
-                    <a class="nav-link active" href="/">Home</a>
-                </form>
-                <form action="/">
-                    <a class="nav-link" href="/about">About</a>
-                </form>
-                <form action="/">
-                    <a class="nav-link" href="/team">Team</a>
-                </form>
+              <nav class="nav nav-masthead justify-content-center">
             </nav>
         </div>
     </header>
@@ -56,7 +45,7 @@
 
     <footer class="mastfoot mt-auto">
         <div class="inner">
-            <p>© Nikolett Muller and Justin Nietzer</p>
+            <p>© Joseph Brueno and Justin Nietzer</p>
         </div>
     </footer>
 </div>
