--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -22,7 +22,6 @@
 
     <form class="form-signin" method="post">
         <div class="text-center mb-4">
-            <img class="mb-4" src="../static/styles/home_logo.svg" alt="" width="100" height="100">
             <h1 class="h3 mb-3 font-weight-normal font">Register</h1>
         </div>
 
@@ -74,7 +73,7 @@
         </div>
 
         <button class="btn btn-lg btn-primary btn-block" value="CREATE USER" type="submit" href="/send">Sign up</button>
-        <p class="mt-5 mb-3 text-muted text-center">© Nikolett Muller and Justin Nietzer</p>
+        <p class="mt-5 mb-3 text-muted text-center">© Joseph Brueno and Justin Nietzer</p>
     </form>
 </div>
 
