--- a/app/templates/bankingsystem.html
+++ b/app/templates/bankingsystem.html
@@ -37,9 +37,14 @@
                    value="">
         </div>
             <div class="col">
+            <label for="accttype">Account Type</label>
+            <input id="accttype" type="text" class="form-control" placeholder="Checking" name="Account_Type"
+                   value="Checking" readonly>
+        </div>
+            <div class="col">
             <label for="type">Transact Type</label>
-            <input id="type" type="text" class="form-control" placeholder="Checking" name="Transact_Type"
-                   value="" readonly>
+            <input id="type" type="text" class="form-control" placeholder="Deposit" name="Transact_Type"
+                   value="">
         </div>
 
     </div>
